--- a/index.html
+++ b/index.html
@@ -4,22 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PRAXIS AI</title>
-  <link rel="stylesheet" href="/src/styles/globals.css" />
-  <script type="importmap">
-  {
-    "imports": {
-      "react": "https://esm.sh/react@18.2.0",
-      "react-dom": "https://esm.sh/react-dom@18.2.0",
-      "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-      "framer-motion": "https://esm.sh/framer-motion@10.16.16",
-      "three": "https://esm.sh/three@0.158.0",
-      "@react-three/fiber": "https://esm.sh/@react-three/fiber@8.15.11",
-      "@react-three/drei": "https://esm.sh/@react-three/drei@9.92.7",
-      "lucide-react": "https://esm.sh/lucide-react@0.298.0",
-      "gsap": "https://esm.sh/gsap@3.11.0"
-    }
-  }
-  </script>
+  <link rel="stylesheet" href="globals.css" />
 </head>
 <body>
   <div id="root"></div>
