fix(ui): Improve color contrast and readability
Adjusted color variables in `index.html` to increase contrast for UI elements and improve readability, aiming for WCAG AA compliance. Also, removed unnecessary `React.FC` usage in `components/Schedule.tsx` for better type safety.

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
       /* Default Mode: Dark */
       --color-bg: #101010;
       --color-card: #1C1C1E;
-      --color-border: #2D2D2F;
+      --color-border: #404040; /* Increased contrast for UI elements */
       --color-text: #F3F4F6;
-      --color-text-secondary: #9CA3AF;
+      --color-text-secondary: #B0B0B0; /* Increased contrast for readability (WCAG AA) */
     }
     
     html:not(.dark) {
