feat: Add animated focus background themes
Introduces three new animated background themes for focus mode: Synthwave Sunset, Lofi Rain, and Solarpunk Garden. These themes can be purchased and applied via settings, enhancing the visual experience during focused work sessions.

The changes include:
- Defining new 'focus_background' reward types in `constants.ts`.
- Adding CSS for animated gradient backgrounds in `index.html`.
- Updating `types.ts` to include the new reward type.
- Modifying `App.tsx` to handle the purchase and application of focus backgrounds.
- Enhancing `Navigation.tsx` with a more transparent and layered background.
- Refactoring `SettingsRow` in `components/Settings.tsx` for improved structure and accessibility.
- Updating `components/Profile.tsx` with imports for new icons.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,23 @@
     .break-all {
         word-break: break-all;
     }
+
+    /* New Focus Mode Backgrounds */
+    [data-focus-theme="synthwave"] {
+        background: linear-gradient(-45deg, #f87171, #d946ef, #7c3aed, #4f46e5);
+        background-size: 400% 400%;
+        animation: gradient-shift 15s ease infinite;
+    }
+    [data-focus-theme="lofi"] {
+        background: linear-gradient(135deg, #1e293b, #334155, #475569);
+        background-size: 400% 400%;
+        animation: gradient-shift 20s ease infinite;
+    }
+    [data-focus-theme="solarpunk"] {
+        background: linear-gradient(-45deg, #a3e635, #22c55e, #06b6d4, #3b82f6);
+        background-size: 400% 400%;
+        animation: gradient-shift 15s ease infinite;
+    }
   </style>
   <script type="importmap">
 {
