--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
     html:not(.dark) {
       /* Glass Mode */
       --color-bg: #F0F2F5;
-      --color-card: rgba(255, 255, 255, 0.5);
-      --color-border: rgba(255, 255, 255, 0.25);
+      --color-card: rgba(255, 255, 255, 0.7);
+      --color-border: rgba(0, 0, 0, 0.1);
       --color-text: #111827;
       --color-text-secondary: #4B5563;
     }
@@ -136,12 +136,6 @@
       color: var(--color-text);
       background-color: var(--color-bg);
     }
-    
-    html:not(.dark) body {
-      background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	    background-size: 400% 400%;
-	    animation: gradient-shift 15s ease infinite;
-    }
 
     .card {
       background-color: var(--color-card);
@@ -151,6 +145,8 @@
     html:not(.dark) .card {
       -webkit-backdrop-filter: blur(24px);
       backdrop-filter: blur(24px);
+      border: 1px solid transparent;
+      background-color: var(--color-card);
     }
     
     /* Consistent focus styles */
