feat: Improve UI and UX with enhanced navigation and scheduling
Introduces several user interface and experience enhancements:

- **Navigation:** Refactored navigation components for a cleaner, more dynamic visual presentation.
- **Scheduling:** Enhanced the schedule view with improved responsiveness and layout for different screen sizes, including a new staggered task display for testing timeline scrolling.
- **Notes:** Implemented local storage for remembering the notes view mode and added better handling for empty notebooks.
- **AI Chat:** Applied an invisible scrollbar to the AI chat history for a cleaner look.
- **Styling:** Added a new `hide-scrollbar` utility class.

--- a/index.html
+++ b/index.html
@@ -176,6 +176,15 @@
         background-size: 400% 400%;
         animation: gradient-shift 15s ease infinite;
     }
+    
+    /* Invisible Scrollbar Utility */
+    .hide-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+    .hide-scrollbar {
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+    }
   </style>
   <script type="importmap">
 {
