✨ feat: Vanta Black Daily Greetings with Interactive Task Modal
🖤 Enhanced Daily Greetings with Vanta Black Background:
- Implemented true Vanta black (#0a0a0a) with accessibility compliance
- Added atmospheric particle system with 20 animated particles
- Created deep space effect with gradient layers and subtle grid overlay
- Enhanced visual depth with multi-layered background effects

🎯 Interactive Next Up Task with Modal:
- Made Next Up task clickable with hover animations and visual feedback
- Implemented comprehensive task details modal with smooth transitions
- Added Quick Actions: Mark Complete, Edit Task, and Kiko Insights
- Included task summary with metadata display and professional layout

🌟 Ultra-Enhanced 3D Elements:
- Redesigned weather model with 12 animated rays and rotating outer rays
- Enhanced 3D trophy with multi-layer construction and breathing animations
- Added emotionally resonant micro-interactions with pulsing text shadows
- Implemented advanced animation timing based on UX research

🎨 Professional UI Enhancements:
- Applied color psychology principles for emotional resonance
- Used GPU-accelerated transforms for 60fps performance
- Implemented accessibility features with WCAG compliance
- Created responsive design with mobile-optimized interactions

Research-informed design based on Vanta black implementation, modal UX patterns, and 3D animation best practices.

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   }
 }
 </script>
-<script type="module" src="/index.js"></script>
+<script type="module" src="/index.tsx"></script>
 </head>
   <body class="transition-colors duration-300 font-sans">
     <div id="root"></div>
