feat: Complete Praxis-AI Backend Implementation
🚀 Major Features Implemented:

## Core Backend Infrastructure
- ✅ Complete tRPC setup with 10+ routers
- ✅ Hono web framework with CORS and logging
- ✅ Supabase integration for auth and database
- ✅ TypeScript-first with Zod validation
- ✅ Comprehensive error handling and logging

## AI Integration & Orchestration
- ✅ Multi-provider AI support (Grok, Gemini, OpenAI, Anthropic, Perplexity)
- ✅ Intelligent AI orchestrator with cost optimization
- ✅ Feature-specific model selection and caching
- ✅ Usage tracking and quota management
- ✅ Fallback mechanisms for reliability

## Vision AI Services
- ✅ Handwriting OCR processing
- ✅ Event detection from images
- ✅ Instagram link extraction
- ✅ Document analysis (receipts, business cards, menus)
- ✅ QR code detection
- ✅ Formatted text extraction
- ✅ Batch image processing

## Enhanced Authentication & Security
- ✅ Supabase Auth integration
- ✅ Custom user profiles with subscription tiers
- ✅ Feature gating middleware
- ✅ AI request rate limiting
- ✅ End-to-end encryption service
- ✅ Secure API key management
- ✅ Comprehensive audit logging

## Notion Integration
- ✅ Real-time note synchronization
- ✅ HTML to Notion blocks conversion
- ✅ Webhook handling for bidirectional sync
- ✅ Encrypted access token storage
- ✅ Sync operation logging

## Database Schema
- ✅ Comprehensive schema with 15+ tables
- ✅ Row Level Security (RLS) policies
- ✅ Automated triggers and functions
- ✅ Proper indexing for performance
- ✅ Migration system ready

## API Endpoints
- ✅ Dashboard data aggregation
- ✅ Kiko AI chat system
- ✅ Smart notes with AI processing
- ✅ Project management
- ✅ Mind mapping and insights
- ✅ Web search and exploration
- ✅ Gamification system
- ✅ Theme management
- ✅ Calendar and scheduling
- ✅ Health data integration

## Testing & Documentation
- ✅ Comprehensive test suites
- ✅ API documentation
- ✅ Setup guides and migration docs
- ✅ Type safety throughout

## Production R

--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Permissions-Policy" content="browsing-topics=(), camera=(), microphone=(), geolocation=()" />
     <title>Praxis by Surface Tension</title>
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#A855F7">
     <link rel="apple-touch-icon" href="/icon.svg">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Tailwind CSS will be handled by PostCSS in production -->
+    <script>
+      // Development-only Tailwind CSS via CDN
+      if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
+        const script = document.createElement('script');
+        script.src = 'https://cdn.tailwindcss.com';
+        document.head.appendChild(script);
+      }
+    </script>
     <script>
       tailwind.config = {
         darkMode: 'class',
