--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Praxis by Surface Tension</title>
+    <title>Soen by Surface Tension</title>
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#A855F7">
     <link rel="apple-touch-icon" href="/icon.svg">
