--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
     <div id="root"></div>
     <script>
       // Global event bridge for starting Daily Mode without prop drilling
-      window.addEventListener('praxis:start-daily-mode', () => {
-        const evt = new CustomEvent('praxis:bridge', { detail: { type: 'startDailyMode' } });
+      window.addEventListener('soen:start-daily-mode', () => {
+        const evt = new CustomEvent('soen:bridge', { detail: { type: 'startDailyMode' } });
         window.dispatchEvent(evt);
       });
     </script>
